
Package org.springframework.osgi.extender
* added support for disabling the ApplicationContext error handler through extender configuration
* added support for install.context.error.handler property
* changed namespace handlers lifecycle to depend on bundle events STARTED/STOPPED instead of RESOLVED/UNRESOLVED

Package org.springframework.osgi.io
* improved OsgiBundleResource#getFile() file detection method
* eliminated existance check on resolved files for OsgiBundleResource#getFile()

Package org.springframework.osgi.service
* removed deprecated retryTimes parameter in OsgiServiceProxyFactoryBean
* improved type filtering for tracked services
* fixed visibility issue when invoking non-public proxied methods 
* improved waiting code to deal with spurious or accidental wakeups
* fixed issue with OsgiServiceProxyFactoryBean that caused autowiring to fail in some cases

Package org.springframework.osgi.test
* improved FelixOsgiPlatform to support API changes in Felix 1.4.x

Package org.springframework.osgi.web
* fixed extender configuration race condition


Changes in version 1.2.0 M2 (2008-11-24)
----------------------------------------

General
* upgraded to Spring Framework 2.5.6
* raised required Spring Framework version to 2.5.6
* upgraded to Knopflerfish 2.1.1
* aligned bundle symbolic names to Spring convention (changed prefix org.springframework.bundle.osgi. to 
  org.springframework.osgi. )
* added support for compendium namespace (managed-service, config-properties)
* incremented version of spring-osgi.xsd and spring-osgi-compendium.xsd

Package org.springframework.osgi.context
* removed deprecated method AbstractDelegatedExecutionApplicationContext#getContextClassLoader
* introduced dedicated PostProcessor interfaces aware of DelegatedExecutionOsgiBundleApplicationContext's multi-stage
  refresh

Package org.springframework.osgi.extender
* improved shutdown algorithm to deal with self-referenced and transitive service references
